--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = Django
+name = Djang
 version = attr: django.__version__
 url = https://www.djangoproject.com/
 author = Django Software Foundation
